<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Edit_Dialog"
        android:id="@+id/tveditdialog"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="20dp"
        android:textSize="25sp"
        />
    <EditText
        android:id="@+id/etedittext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/Enteryourname"
        android:layout_below="@+id/tveditdialog"
        android:layout_marginTop="30dp"
        android:textSize="20sp" />

    <Button
        android:id="@+id/btndelete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/etedittext"
        android:layout_marginStart="60dp"
        android:layout_marginTop="30dp"
        android:text="@string/delete" />
    <Button
        android:id="@+id/btnok1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/etedittext"
        android:layout_marginStart="40dp"
        android:layout_marginTop="30dp"
        android:layout_toEndOf="@id/btndelete"
        android:text="@string/edit" />


</RelativeLayout>